# django_converter

./: .env.example  Makefile  docker-compose.yaml  pyproject.toml  readme.md  requirements.dev.txt
src/web/: Makefile  README.md  requirements.txt
src/web/app/converter/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
src/web/app/converter/migrations/: 0001_initial.py
src/web/app/converter/static/converter/css/: files.css
src/web/app/converter/templates/converter/: files.html
src/web/core/: asgi.py  celery.py  settings.py  single_model.py  urls.py  wsgi.py
src/web/docker/: Dockerfile_django  Dockerfile_worker  entrypoint.sh
src/web/media/: readme.md
