[tool.poetry]
name = "galera"
version = "0.1.0"
description = ""
authors = ["RomanBorovskiy <borovskiyroman@gmail.com>"]
readme = "README.md"

[tool.poetry.dev-dependencies]
flake8 = "6.1.0"
black = "23.11.0"
isort = "5.12.0"
flake8-pyproject = "1.2.3"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
celery = "^5.3.6"
redis = "^5.0.1"
flower = "^2.0.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  |venv
)/
'''
[tool.flake8]
exclude =[".git","__pycache__", "venv"]
max-line-length = 120
count = true

[tool.isort]
src_paths = ["**/src/*"]
line_length = 120